added video content block

--- a/cms/templates/_partials/components/content_builder.twig
+++ b/cms/templates/_partials/components/content_builder.twig
@@ -71,6 +71,8 @@
             'contentBuilder.inline_hero:image',
             'contentBuilder.inline_hero:children',
             'contentBuilder.custom_html',
+            'contentBuilder.video',
+            'contentBuilder.video:image'
         ]
     ) %}
 
