updated team_grid content block, removed unused assets from dist

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1801,6 +1801,7 @@ footer.site-footer {
           }
 
           .item-description {
+            font-size: rem-calc(18px);
             font-weight: 600;
             margin-bottom: 0;
           }
