--- a/cms/templates/_layouts/base.twig
+++ b/cms/templates/_layouts/base.twig
@@ -75,6 +75,13 @@
 
     {# -- HTML Body -- #}
     <body {% if bodyClass is defined %}class="{{ bodyClass }}"{% endif %}>
+        {% if craftEnvironment != 'staging' and craftEnvironment != 'local' %}
+            <!-- Google Tag Manager (noscript) -->
+            <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N53BZ2G"
+            height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+            <!-- End Google Tag Manager (noscript) -->
+        {% endif %}
+
         {% block body %}
         {% endblock %}
 
