--- a/cms/templates/_partials/components/content_builder.twig
+++ b/cms/templates/_partials/components/content_builder.twig
@@ -81,7 +81,7 @@
 	{% endfor %}
 
 	{% for block in entry.contentBuilder if block.level == 1 %}
-        <div id="permalink-{{ block.type.handle }}--{{ loop.index }}">
+        <div id="permalink-{{ block.type.handle }}">
 		    {% include '_partials/blocks/' ~ block.type.handle ignore missing with {block: block, entry: entry, sectionHandle: entry.getSection().handle} only %}
         </div>
 	{% endfor %}
