--- a/cms/templates/_partials/blocks/hero.twig
+++ b/cms/templates/_partials/blocks/hero.twig
@@ -38,7 +38,7 @@
       <h1 class="page--heading">{{ heading }}</h1>
     {% endif %}
     {% if subheading|length %}
-      <p class="subtitle--heading">{{ subheading|replace('|', '<br>') }}</p>
+      <p class="subtitle--heading">{{ subheading|replace('|', '<br>')|striptags('<br>')|raw }}</p>
     {% endif %}
     {% if buttons and buttons|length %}
       <div class="buttons">
