--- a/cms/templates/_partials/blocks/hero_subpage.twig
+++ b/cms/templates/_partials/blocks/hero_subpage.twig
@@ -27,7 +27,7 @@
     } %}
 {% endif %}
 
-<section class="section section--medium section--whitespace section-{{ block_type }}--block section--{{ sectionType }} animatable">
+<section id="permalink-{{ index }}--{{ block.type.handle }}" class="section section--medium section--whitespace section-{{ block_type }}--block section--{{ sectionType }} animatable">
     {% if image|length %}
     <div class="background-container">
         {{ LazyImager.LazyImager(image, imageOptions) }}
