--- a/cms/templates/_partials/blocks/icon_grid.twig
+++ b/cms/templates/_partials/blocks/icon_grid.twig
@@ -11,7 +11,7 @@
 {% set items = block.children is defined ? block.children|filter(item => item.type.handle == 'icon_item') : null %}
 {% set buttons = block.children is defined ? block.children|filter(item => item.type.handle == 'button') : null %}
 
-<section class="section section--medium section--dark section-{{ block_type }}--block section--{{ sectionType }} animatable">
+<section id="permalink-{{ index }}--{{ block.type.handle }}" class="section section--medium section--dark section-{{ block_type }}--block section--{{ sectionType }} animatable">
     <div class="container">
         {% if subheading|length %}
             <p class="subtitle--heading">{{ subheading }}</p>
