--- a/cms/templates/_partials/blocks/image_text.twig
+++ b/cms/templates/_partials/blocks/image_text.twig
@@ -28,7 +28,7 @@
     } %}
 {% endif %}
 
-<section class="section section--medium section--whitespace section-{{ block_type }}--block section--{{ sectionType }} section-alignment--{{ sectionAlignment }} animatable">
+<section id="permalink-{{ index }}--{{ block.type.handle }}" class="section section--medium section--whitespace section-{{ block_type }}--block section--{{ sectionType }} section-alignment--{{ sectionAlignment }} animatable">
     <div class="container">
         <div class="grid-container">
             <div class="grid-x grid-margin-x align-center">
