--- a/cms/templates/_partials/blocks/image_text_slider.twig
+++ b/cms/templates/_partials/blocks/image_text_slider.twig
@@ -11,7 +11,7 @@
 {% set sectionType = block['sectionType'] is defined ? block.sectionType : 'standard' %}
 {% set items = block.children is defined ? block.children|filter(item => item.type.handle == 'imageTextSliderItem') : null %}
 
-<section class="section section--dark section-{{ block_type }}--block section--{{ sectionType }} animatable">
+<section id="permalink-{{ index }}--{{ block.type.handle }}" class="section section--dark section-{{ block_type }}--block section--{{ sectionType }} animatable">
     <div class="content-container">
         <div class="text-container">
             <div class="container container--full">
