--- a/cms/templates/_partials/blocks/inline_hero_columns.twig
+++ b/cms/templates/_partials/blocks/inline_hero_columns.twig
@@ -29,7 +29,7 @@
 {% endif %}
 
 
-<section class="section section--medium section-{{ block_type }}--block section--dark animatable">
+<section id="permalink-{{ index }}--{{ block.type.handle }}" class="section section--medium section-{{ block_type }}--block section--dark animatable">
   {% if image %}
     <div class="background-container">
       {{ LazyImager.LazyImager(image, imageOptions) }}
