--- a/cms/templates/_partials/blocks/logo_list.twig
+++ b/cms/templates/_partials/blocks/logo_list.twig
@@ -19,7 +19,7 @@
     }).all() %}
 {% endif %}
 
-<section class="section section--medium section--whitespace section-{{ block_type }}--block section--{{ sectionType }} animatable">
+<section id="permalink-{{ index }}--{{ block.type.handle }}" class="section section--medium section--whitespace section-{{ block_type }}--block section--{{ sectionType }} animatable">
     <div class="container">
         {% if subheading|length %}
             <p class="subtitle--heading">{{ subheading }}</p>
