--- a/cms/templates/_partials/blocks/map_grid.twig
+++ b/cms/templates/_partials/blocks/map_grid.twig
@@ -12,7 +12,7 @@
 {% set items = block.children is defined ? block.children|filter(item => item.type.handle == 'map_grid_item') : null %}
 {% set buttons = block.children is defined ? block.children|filter(item => item.type.handle == 'button') : null %}
 
-<section class="section section--medium section--whitespace {% if sectionType|length %}section--{{ sectionType }}{% endif %} section-{{ block_type }}--block animatable">
+<section id="permalink-{{ index }}--{{ block.type.handle }}" class="section section--medium section--whitespace {% if sectionType|length %}section--{{ sectionType }}{% endif %} section-{{ block_type }}--block animatable">
     <div class="container">
         {% if subheading|length %}
             <p class="subtitle--heading">{{ subheading }}</hp>
