--- a/cms/templates/_partials/blocks/points_table_list.twig
+++ b/cms/templates/_partials/blocks/points_table_list.twig
@@ -7,7 +7,7 @@
 {% set sectionType = block['sectionType'] is defined ? block.sectionType : 'standard' %}
 {% set tableItems = block.children is defined ? block.children|filter(item => item.type.handle == 'points_table') : null %}
 
-<section class="section section--medium section--whitespace section-{{ block_type }}--block section--{{ sectionType }} animatable">
+<section id="permalink-{{ index }}--{{ block.type.handle }}" class="section section--medium section--whitespace section-{{ block_type }}--block section--{{ sectionType }} animatable">
     <div class="container">
         {% if subheading|length %}
             <p class="subtitle--heading">{{ subheading }}</p>
