--- a/cms/templates/_partials/blocks/team_text_grid.twig
+++ b/cms/templates/_partials/blocks/team_text_grid.twig
@@ -10,7 +10,7 @@
 {% set sectionType = block['sectionType'] is defined ? block.sectionType : 'standard' %}
 {% set items = block.children is defined ? block.children|filter(item => item.type.handle == 'team_text_grid_item') : null %}
 
-<section class="section section--medium section--whitespace section-{{ block_type }}--block section--{{ sectionType }} animatable">
+<section id="permalink-{{ index }}--{{ block.type.handle }}" class="section section--medium section--whitespace section-{{ block_type }}--block section--{{ sectionType }} animatable">
     <div class="container">
         {% if subheading|length %}
             <p class="subtitle--heading">{{ subheading }}</p>
