--- a/cms/templates/_partials/blocks/text_side_heading.twig
+++ b/cms/templates/_partials/blocks/text_side_heading.twig
@@ -8,7 +8,7 @@
 {% set sectionType = block['sectionType'] is defined ? block.sectionType : 'standard' %}
 {% set buttons = block.children is defined ? block.children|filter(item => item.type.handle == 'button') : null %}
 
-<section class="section section--medium section--whitespace section-{{ block_type }}--block section--{{ sectionType }} animatable">
+<section id="permalink-{{ index }}--{{ block.type.handle }}" class="section section--medium section--whitespace section-{{ block_type }}--block section--{{ sectionType }} animatable">
     <div class="container">
         <div class="heading-container">
             {% if subheading|length %}
