commented out newsletter signup

--- a/cms/templates/_partials/global/footer.twig
+++ b/cms/templates/_partials/global/footer.twig
@@ -1,6 +1,6 @@
 {# @var craft \craft\web\twig\variables\CraftVariable #}
 {% cache globally unless cacheExempt %}
-{% include '_partials/snippets/newsletter-signup' %}
+{# {% include '_partials/snippets/newsletter-signup' %} #}
 <footer class="site-footer animatable">
     <div class="footer-links">
         <div class="container">
