--- a/cms/templates/_partials/global/header.twig
+++ b/cms/templates/_partials/global/header.twig
@@ -1,5 +1,5 @@
 {# @var craft \craft\web\twig\variables\CraftVariable #}
 <header class="site-header">
-    {% include "_partials/components/promobar" %}
+    {# {% include "_partials/components/promobar" %} #}
     {% include "_partials/components/navbar" %}
 </header>
