removed unneeded content blocks, updated image compression quality defaults

--- a/cms/templates/_macros/lazyImager.twig
+++ b/cms/templates/_macros/lazyImager.twig
@@ -55,7 +55,7 @@ https://github.com/inuitcss/inuitcss/blob/develop/objects/_objects.ratio.scss
             { width: 768 },
             { width: 360 },
         ],
-        allowUpscale: true,
+        allowUpscale: false,
         alt: '',
         class: 'o-media',
         transparent: false,
@@ -63,7 +63,7 @@ https://github.com/inuitcss/inuitcss/blob/develop/objects/_objects.ratio.scss
         interlace: true,
         lazy: true,
         mode: 'crop',
-        quality: 80,
+        quality: 60,
         ratio: false, 
         wrapImage: false,
         wrapClass: 'image-container',
