--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -4,18 +4,18 @@
 ********************************************************************************************************/
 
 /******************** Color and font variables ********************/
-$primary-accent: #00356A;
-$secondary-accent: #E8AB35;
-$tertiary-accent: #027DC5;
+$primary-accent: #003B71;
+$secondary-accent: #7F9D92;
+$tertiary-accent: #003B71;
 $dark-heading-copy-color: #FFFFFF;
 
-$body-copy-font: 'Open Sans', sans-serif;
-$body-text-color: #31353D;
+$body-copy-font: 'Nunito', sans-serif;
+$body-text-color: #333333;
 $body-copy-color: $body-text-color;
-$subheading-copy-font: "Open Sans", sans-serif;
-$heading-copy-font: "Montserrat", sans-serif;
-$accent-copy-font: "Over the Rainbow", cursive;
-$heading-text-color: #00356A;
+$subheading-copy-font: "Nunito", sans-serif;
+$heading-copy-font: "Poppins", sans-serif;
+$accent-copy-font: "Nunito", sans-serif;
+$heading-text-color: #003B71;
 $heading-copy-color: $heading-text-color;
 $dark-heading-copy-color: #FFFFFF;
 $base-font-size: 20px;
