--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -91,7 +91,7 @@
   font-size: rem-calc(35);
 
   @include breakpoint(medium up) {
-    font-size: rem-calc(65);
+    font-size: rem-calc(48);
   }
 }
 
@@ -405,7 +405,7 @@ header.site-header {
         margin-right: 1rem;
 
         img, svg {
-          height: rem-calc(80px);
+          height: rem-calc(60px);
         }
 
         @include breakpoint(medium down) {
@@ -423,7 +423,7 @@ header.site-header {
         display: flex;
         flex: 1;
         align-items: center;
-        justify-content: center;
+        justify-content: space-between;
 
         .mobile-navigation-trigger-container {
           display: none;
@@ -465,12 +465,11 @@ header.site-header {
     a {
       display: block;
       color: #1C2436;
-      padding: 1.75rem 0.75rem;
+      padding: 1.5rem 0.5rem;
       transition: color 300ms ease;
       text-transform: uppercase;
-      font-size: rem-calc(17px);
+      font-size: rem-calc(18px);
       font-weight: 600;
-      letter-spacing: 0.05em;
     }
 
     &:hover > a {
